# MXLLM

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test.py
LLMMiner/: __init__.py  main.py
LLMMiner/download/: README.md  main.py
LLMMiner/download/ACS/: main.py  parser.py  setup.py
LLMMiner/download/RSC/: main.py  (+1 more)
LLMMiner/parser/: __init__.py  abstract.py  classifier.py  content_evaluator.py  content_extractor.py  content_optimizer.py  field_extractor.py  main.py  prompt.yaml  test.py  test_json_extraction.py  test_stream.py  utils.py
LLMMiner/router/: mcp_router.py
LLMMiner/static/: classification_prompts.py
predict/: PLS_PREDICTOR_README.md  README.md  __init__.py  demo_usage.py  example_pls_usage.py  main.py  pls_predictor.py  predict_formula.py  test_pls_predictor.py  test_pls_simple.py  test_results.json  trained_pls_model.pkl  化学式解析日志.txt
predict/evaluation/: evaluator.py
predict/preprocessing/: data_balancer.py  data_processor.py  data_quality_filter.py  data_splitter.py  feature_enhancer.py  feature_optimizer.py
predict/results/: eab_class_evaluation_results.json  rl_class_evaluation_results.json  summary_report.json
predict/scripts/: demo_data_filtering.py  generate_eab_balanced_ultra_quality.py  generate_ultra_high_quality_rl_balanced.py  test_pls_features.py
recommend/: README.md  __init__.py  main.py  requirements.txt
recommend/core/: config_cache.py  data_loader.py  llm_handler.py  material_validator.py  rag_system.py
recommend/ui/: main_window.py  modern_components.py  modern_window.py
(+14 files in other folders)
