[project]
name = "mxllm"
version = "0.1.0"
description = "mxllm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "cython>=3.1.2",
    "deepseek>=1.0.0",
    "fastapi>=0.116.0",
    "fastmcp>=2.10.2",
    "graphviz>=0.21",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.3",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "lxml>=5.4.0",
    "pandas>=2.3.1",
    "pygame>=2.6.1",
    "pymermaid>=1.7.1",
    "selenium>=4.33.0",
    "setuptools>=80.9.0",
]
